:sparkles: added SCP Dockerfile configuration

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,5 +3,20 @@
 # Github: arthurcadore
 # Capacitação Redes - PV Intelbras
 
-# Use the base image for VSFTP:
-FROM webdevops/vsftp:latest
+# Use Alpine Linux as base image
+FROM alpine:latest
+
+# Install OpenSSH server
+RUN apk update && \
+    apk add openssh && \
+    rm -rf /var/cache/apk/*
+
+# Generate host keys
+RUN ssh-keygen -A
+
+# Add user "capacita" with password "capacitapass"
+RUN adduser -D capacita
+RUN echo "capacita:capacitapass" | chpasswd
+
+# Start SSH server and keep container running
+CMD ["/usr/sbin/sshd", "-D", "&&", "tail", "-f", "/dev/null"]
